# hlsl_box

./: .gitignore  Cargo.toml  README.md  about.hbs  about.toml  license.html  package.ps1  release.toml  shadertoolsconfig.json
.github/: release.yml
.github/actions/cache_cargo/: action.yml
.github/workflows/: package.yml  publish.yml  release_pr.yml  test.yml
examples/: circle.hlsl  fill.hlsl  minimum.hlsl  snoise_sample.hlsl  sphere.hlsl
include/: constants.hlsli  hlsl_box.hlsl  hlsl_box.hlsli  snoise.hlsli
script/: build.ps1  dxc.ps1  package.ps1  release.ps1
src/: application.rs  default_settings.toml  default_window.toml  error.rs  hlsl.rs  main.rs  messages.rs  monitor.rs  renderer.rs  settings.rs  utility.rs  video.rs  window.rs
src/application/: error_message.rs  frame_counter.rs  message_board.rs
src/renderer/: buffers.rs  command_list.rs  command_queue.rs  copy_texture_shader.rs  layer_shader.rs  pixel_shader.rs  plane.rs  read_back_buffer.rs  render_target.rs  render_target_buffer.rs  swap_chain.rs  ui.rs  utility.rs  video.rs
src/shader/: copy_texture.hlsl  error.hlsl  plane.hlsl  test.hlsl
