[package]
name = "hlsl_box"
version = "0.1.0"
edition = "2021"

[dependencies]
coinit = "0.1.4"
thiserror = "1.0.30"
wita = "0.15.2"
ifdlg = { git = "https://github.com/LNSEAB/ifdlg" }
libc = "0.2.124"
anyhow = { version = "1.0.57", features = ["backtrace"] }
mltg = "0.8.3"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.9"
regex = "1.5.5"
once_cell = "1.10.0"

[dependencies.windows]
version = "0.36.1"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D_Dxc",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Globalization",
]

[profile.production]
inherits = "release"
lto = "fat"
strip = "debuginfo"
