[package]
name = "hlsl_box"
version = "0.3.1"
edition = "2021"
authors = ["LNSEAB <691752+LNSEAB@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/LNSEAB/hlsl_box"
publish = false

[dependencies]
coinit = "0.1.5"
thiserror = "1.0.31"
wita = "0.16.1"
ifdlg = { git = "https://github.com/LNSEAB/ifdlg" }
libc = "0.2.126"
mltg = "0.8.5"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
serde = { version = "1.0.137", features = ["derive"] }
toml = "0.5.9"
regex = "1.5.6"
once_cell = "1.12.0"
clap = { version = "3.1.18", features = ["derive"] }
gecl = "0.0.2"
image = "0.24.2"
chrono = "0.4.19"
anyhow = { version = "1.0.57", features = ["backtrace"] }

[dependencies.windows]
version = "0.37.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D_Dxc",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Globalization",
    "Win32_Media_MediaFoundation",
]

[dependencies.tokio]
version = "1.18.2"
features = [
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
]

[profile.dev.package."*"]
opt-level = 2

[profile.production]
inherits = "release"
lto = "fat"
strip = "debuginfo"

[package.metadata.release]
dev-version = false
publish = false
push = false
tag = false
pre-release-commit-message = "{{version}}"
